fix z-index bug for modal

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,3 +13,7 @@
 button.MuiButtonBase-root:focus {
   outline: none;
 }
+
+label.MuiInputLabel-outlined {
+  z-index: 0;
+}
